Fix contrast issue on links in Home page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,11 +287,12 @@ nav.curls-nav .curls-toggler-icon {
 }
 
 .further ol a {
-    color: #f947ff;
+    color: #000000;
+    font-weight: 600;
 }
 
 .further ol a:hover {
-    color: #696969;
+    color: #f947ff;
 }
 
 .more-card {
